<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/menu_principal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#d3d3d3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_vender"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:drawableTop="@drawable/vender"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/selecionado"
            android:textSize="10sp"
            android:text="@string/venda_menu"
            android:layout_marginBottom="1dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cadastro"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:drawableTop="@drawable/cadastro"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/semfoco"
            android:textSize="10sp"
            android:text="@string/cadastro_menu"
            android:layout_marginBottom="1dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_relatorio"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:drawableTop="@drawable/relatorio"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/semfoco"
            android:textSize="10sp"
            android:text="@string/relatorio_menu"
            android:layout_marginBottom="1dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_contador"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:drawableTop="@drawable/emailcontador"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/semfoco"
            android:textSize="10sp"
            android:text="@string/contador_menu"
            android:layout_marginBottom="1dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_config"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:drawableTop="@drawable/config"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/semfoco"
            android:textSize="10sp"
            android:text="@string/configurar_menu"
            android:layout_marginBottom="1dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_suporte"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:drawableTop="@drawable/suporte"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/semfoco"
            android:textSize="10sp"
            android:text="@string/suporte_menu"
            android:layout_marginBottom="1dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sair"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:drawableTop="@drawable/sair"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/semfoco"
            android:textSize="10sp"
            android:text="@string/sair_menu"
            android:layout_marginBottom="1dp"/>
        <androidx.appcompat.widget.AppCompatButton
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/semfoco"
            android:textSize="10sp"
            android:layout_marginBottom="1dp"/>
        <androidx.appcompat.widget.AppCompatButton
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/semfoco"
            android:textSize="10sp"
            android:layout_marginBottom="1dp"/>
        <androidx.appcompat.widget.AppCompatButton
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:focusable="false"
            android:background="@color/semfoco"
            android:textSize="10sp"
            android:layout_marginBottom="1dp"/>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/contentFrame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@+id/menu_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>